big update of X-ray deposition statistics
include depositions since 2004 - bigger downloads and slower
initialization, but probably worth it

various small modifications

update dependencies

--- a/calendar.html
+++ b/calendar.html
@@ -129,8 +129,8 @@ dates from <b>PDB entries released before 2024-07-09</b>.</h4>
  Source code and info...</a></b>
 </div>
 <script src="https://d3js.org/d3.v4.min.js"></script>
-<!--script src="d3.v4.min.js"></script-->
-<script type="text/javascript">
+<!--script src="d3.v4.js"></script-->
+<script>
 "use strict";
 
 var ystart = 2015;
