--- a/residues.html
+++ b/residues.html
@@ -74,7 +74,7 @@ a:link, a:visited { text-decoration: none; }
 </div>
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/datatables.min.js"></script>
-<script type="text/javascript">
+<script>
 "use strict";
 var file_count = 199766;
 var file_percent_mult = 100.0 / file_count;
