--- a/tags.html
+++ b/tags.html
@@ -155,7 +155,7 @@ span[eg]:hover:after {
 <script src="js/d3-request.v1.min.js"></script>
 <script src="js/d3-selection.v1.min.js"></script>
 <script src="js/tablesort.min.js"></script>
-<script type="text/javascript">
+<script>
 "use strict";
 
 function tr_html(d) {
