--- a/trends.html
+++ b/trends.html
@@ -75,7 +75,7 @@ A different presentation of the same data as on
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <!--script src="js/d3.v4.js"></script-->
 <script src="js/crossfilter.js"></script>
-<script src="js/dc.js"></script>
+<script src="js/dc.min.js"></script>
 <script>
 "use strict";
 
