--- a/xray.html
+++ b/xray.html
@@ -191,7 +191,7 @@ div.dc-chart rect.deselected + text.row { fill: #555; }
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <!--script src="js/d3.v4.js"></script-->
 <script src="js/crossfilter.js"></script>
-<script src="js/dc.js"></script>
+<script src="js/dc.min.js"></script>
 <script>
 "use strict";
 
