index.html: minor edits

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ li .h2 { font-size: 20px; display: block; margin: 10px 0; font-weight: bold; }
 a:link, a:visited { text-decoration: none; color: #16a; }
 ul { list-style-type: none; margin: 40px 0; padding: 0; }
 hr { color: #888; background-color: #888; clear: both; margin: 60px 0 0; }
-li img { float: left; margin: 0 30px 0 0; vertical-align: bottom;
+li img { float: left; margin: 0 30px 10px 0; vertical-align: bottom;
          box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2); }
 @media only screen and (max-width: 600px) {
  li img { display: none; }
@@ -29,9 +29,9 @@ li img { float: left; margin: 0 30px 0 0; vertical-align: bottom;
 <ul>
 <li><a href="xray.html"><img src="thumbs/xtal.png" alt="">
 <span class="h2">X-ray data processing</span></a>
-Interactive exploration of how detectors and the software in use
-differ between synchrotrons, and how they change in time.
-Plus other correlations.
+Explore how detectors and the software in use
+differ between synchrotrons, how they change over time,
+and other correlations. Interactive!
 
 <li><a href="calendar.html"><img src="thumbs/calendar.png" alt="">
 <span class="h2">Synchrotron work patterns</span></a>
@@ -39,16 +39,16 @@ What can we tell from data collection dates in the PDB?
 
 <li><a href="../periodic-table/"><img src="thumbs/periodic-table.png" alt="">
 <span class="h2">Periodic table in the PDB</span></a>
-Searching PDB entries by elements.
+Search for PDB entries by elements.
 
 <li><a href="tags.html"><img src="thumbs/tags.png" alt="">
 <span class="h2">PDBx/mmCIF tags</span></a>
 A table that shows which tags are actually in use.
-<br>And <a href="cod-tags.html">here is a similar table for the COD</a>.
+<br>See also a similar <a href="cod-tags.html"><b>table for the COD</b></a>.
 
 <li><a href="residues.html"><img src="thumbs/residue.png" alt="">
 <span class="h2">Frequency of chemical components</span></a>
-A table that counts in how many entries each residue and ligand is present.
+A table that counts how many entries each residue and ligand are present in.
 
 </ul>
 
